--- a/public/inspiniaSeed/views/clients.html
+++ b/public/inspiniaSeed/views/clients.html
@@ -64,9 +64,9 @@
 </select> -->
 
 
-<div>
+<!-- <div>
     {{clientForm.client.fname}} {{client.lname}} {{testfield}}
-</div>
+</div> -->
 <div class="row">
     <div class="col-lg-12">
         <div class="ibox float-e-margins">
@@ -235,14 +235,16 @@
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">IVR PIN (four digits min)</label>
+                            <div class="col-md-2"><input type="text" placeholder=".col-md-4" name="ivrPin"
+                                                         data-ng-model="clientForm.ivrPin" class="form-control"></div>
 
-                            <div class="col-md-2"><input type="text" placeholder=".col-md-4" class="form-control"></div>
                             <label class="col-sm-2 control-label">NoReadingThreshold (Hours)</label>
+                            <div class="col-md-2"><input type="text" placeholder=".col-md-4" name="noReadingThreshold"
+                                                         data-ng-model="clientForm.noReadingThreshold"  class="form-control"></div>
 
-                            <div class="col-md-2"><input type="text" placeholder=".col-md-4" class="form-control"></div>
                             <label class="col-sm-2 control-label">Timer Timeout (Hours)</label>
-
-                            <div class="col-md-2"><input type="text" placeholder=".col-md-4" class="form-control"></div>
+                            <div class="col-md-2"><input type="text" placeholder=".col-md-4" name="timerTimeout"
+                                                         data-ng-model="clientForm.timerTimeout" class="form-control"></div>
                         </div>
 
 
