--- a/public/inspiniaSeed/views/common/navigation.html
+++ b/public/inspiniaSeed/views/common/navigation.html
@@ -29,14 +29,23 @@
             <li ui-sref-active="active">
                 <a ui-sref="index.main"><i class="fa fa-laptop"></i> <span class="nav-label">Main page</span> </a>
             </li>
-            <li ui-sref-active="active">
+            <!-- <li ui-sref-active="active">
                 <a ui-sref="index.minor"><i class="fa fa-desktop"></i> <span class="nav-label">Minor page</span></a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="index.patient"><i class="fa fa-desktop"></i> <span class="nav-label">Patient Details</span></a>
+            </li> -->
+            <li ui-sref-active="active">
+                <a ui-sref="index.login"><i class="fa fa-desktop"></i> <span class="nav-label">Login</span></a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="index.clients"><i class="fa fa-desktop"></i> <span class="nav-label">Client List</span></a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="charts.chartjs_chart"><i class="fa fa-desktop"></i> <span class="nav-label">Chart.js</span></a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="mytest.test"><i class="fa fa-desktop"></i> <span class="nav-label">test</span></a>
             </li>
         </ul>
 
